--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ Flask-Login==0.6.2
 Flask-Mail==0.9.1
 Flask-SQLAlchemy==3.0.2
 Flask-WTF==1.2.1
+gitdb==4.0.11
+GitPython==3.1.40
 greenlet==3.0.1
 idna==3.6
 itsdangerous==2.0.1
@@ -24,6 +26,7 @@ pipreqs==0.4.13
 python-dotenv==1.0.0
 requests==2.31.0
 setuptools==68.2.2
+smmap==5.0.1
 SQLAlchemy==2.0.21
 typing_extensions==4.7.1
 urllib3==2.1.0
